Replace hard-coded UTF-8 encodings with StandardCharsets